z-index was fixed in kaufman's section

--- a/styles/style.css
+++ b/styles/style.css
@@ -266,10 +266,14 @@
 
 .section-title_theme_dark{
   color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark{
   color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .kaufman-table{
